[gd_scene load_steps=5 format=3 uid="uid://dokxlcxkkdgtt"]

[ext_resource type="Script" path="res://src/UI/Body/GlobalStyles/Scripts/outline_container.gd" id="1_sl8ck"]
[ext_resource type="PackedScene" uid="uid://2cftnam31qlk" path="res://src/UI/Components/input.tscn" id="2_0hpev"]
[ext_resource type="PackedScene" uid="uid://nfofbgvn8r41" path="res://src/UI/Components/input_color.tscn" id="3_uanij"]
[ext_resource type="PackedScene" uid="uid://c3p2i38hqudow" path="res://src/UI/Body/GlobalStyles/Gradient/body_gradient.tscn" id="4_rcw7s"]

[node name="OutlineContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sl8ck")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="RemoveButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "X"

[node name="XInput" parent="." instance=ExtResource("2_0hpev")]
layout_mode = 2
type = 2
name_label = "X"
reset = false

[node name="YInput" parent="." instance=ExtResource("2_0hpev")]
layout_mode = 2
type = 2
name_label = "Y"
reset = false

[node name="OutlineSizeInput" parent="." instance=ExtResource("2_0hpev")]
layout_mode = 2
type = 2
name_label = "KEY_OUTLINE_SIZE"
reset = false

[node name="BlurSizeInput" parent="." instance=ExtResource("2_0hpev")]
layout_mode = 2
type = 2
name_label = "KEY_BLUR_SIZE"
reset = false

[node name="InputColor" parent="." instance=ExtResource("3_uanij")]
layout_mode = 2
name_label = "KEY_COLOR"
reset = false

[node name="OnlyOutlineCheckButton" type="CheckButton" parent="."]
layout_mode = 2
text = "KEY_ONLY_OUTLINE"

[node name="ActiveGradientCheckButton" type="CheckButton" parent="."]
layout_mode = 2
text = "KEY_GRADIENT"

[node name="BodyGradient" parent="." instance=ExtResource("4_rcw7s")]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="changed" from="XInput" to="." method="_on_x_input_changed"]
[connection signal="changed" from="YInput" to="." method="_on_y_input_changed"]
[connection signal="changed" from="OutlineSizeInput" to="." method="_on_outline_size_input_changed"]
[connection signal="changed" from="BlurSizeInput" to="." method="_on_blur_size_input_changed"]
[connection signal="changed" from="InputColor" to="." method="_on_input_color_changed"]
[connection signal="toggled" from="OnlyOutlineCheckButton" to="." method="_on_only_outline_check_button_toggled"]
[connection signal="toggled" from="ActiveGradientCheckButton" to="." method="_on_active_gradient_check_button_toggled"]
